welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: type mismatch;
 found   : Unit
 required: Boolean
		for (i<- 0 to 3 ) {
                      ^arrayFront9:13: error: type mismatch;
 found   : Unit
 required: Boolean
		for (i<- 0 to l ) {
                      ^