welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	var l = nums.length -1
	var rep = false
	if (l <= 3) {
		for (i<- 0 to 3 ) {
			if ( nums(i) == 9 ) {
				rep = true
			 
			}
		}
	}
	else {
		for (i<- 0 to l ) {
		if ( nums(i) == 9 ) {
				rep = true
			 
			}
		}
	}

	
}
